Fix fixed spacing css warnings

--- a/style.css
+++ b/style.css
@@ -32,38 +32,41 @@
   --blue-900: hsl(216, 50%, 16%);
   --blue-800: hsl(215, 32%, 27%);
   --white: hsl(0, 0%, 100%);
-  --font-size: 18px;
   --font-family: "Outfit", sans-serif;
+  font-size: 16px;
 }
 
 * {
   font-family: var(--font-family);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .text-preset-1 {
   font-family: var(--font-family);
-  font-size: 22px;
+  font-size: 1.375rem;
   line-height: 1.25;
   font-weight: 600;
 }
 
 .text-preset-2 {
   font-family: var(--font-family);
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 1.45;
   font-weight: 300;
 }
 
 .text-preset-3 {
   font-family: var(--font-family);
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.25;
   font-weight: 600;
 }
 
 .text-preset-4 {
   font-family: var(--font-family);
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.25;
   font-weight: 400;
 }
@@ -96,11 +99,13 @@ body {
 .card {
   max-width: 350px;
   width: 100%;
+  height: 596px;
   border-radius: 15px;
   background-color: var(--blue-900);
   padding: 24px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .card-image {
@@ -114,6 +119,7 @@ body {
 .card-body {
   display: flex;
   flex-direction: column;
+  gap: 16px;
 
   > .card-description {
     color: var(--blue-500);
@@ -122,6 +128,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 8px;
+
     > .price {
       display: flex;
       justify-content: center;
@@ -129,10 +137,10 @@ body {
       gap: 8px;
       color: var(--cyan-400);
       font-weight: 700;
-      font-size: 20px;
+      font-size: 1.25rem;
     }
     > .date {
-      font-size: 20px;
+      font-size: 1.25rem;
       font-weight: 400;
       display: flex;
       justify-content: center;
@@ -149,12 +157,13 @@ body {
   background-color: var(--blue-800);
   color: var(--blue-800);
   border: none;
+  margin: 24px 0;
 }
 
 .card-footer {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: ;
   > .footer-image {
     width: 33px;
     height: 33px;
